--- a/css/styles.css
+++ b/css/styles.css
@@ -29,129 +29,86 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/*generic default styles*/
-
-body {
   font-family: 'Open Sans', sans-serif;
-  font-size: 14px; /*1em equals 14px = 1rem*/
+  font-size: 14px;
+ /*1em equals 14px = 1rem*/
   line-height: 1.5;
   color: black;
 }
-
 h1 {
   font-size: 71px;
   line-height: 106px;
   margin-bottom: 17px;
   font-weight: bold;
 }
-
 h2 {
   font-size: 48px;
   margin-bottom: 12px;
   font-weight: bold;
 }
-
 p {
   margin-bottom: 1em;
 }
-
 img {
   max-width: 100%;
   height: auto;
 }
-
 .container {
-  padding: 1em; 
+  padding: 1em;
 }
-
 nav {
   background-color: #222222;
 }
-
-nav a:link,
-link:visited {
+nav a:link, link:visited {
   display: block;
   color: #c78b07;
   font-size: 18px;
   padding-top: 17px;
   padding-bottom: 17px;
   text-decoration: none;
-  text-align: center;   
+  text-align: center;
 }
-
 .logo {
   background-color: #c78b07;
   padding-top: 20px;
   padding-bottom: 20px;
 }
-
-nav li.current a:link, 
-nav li.current link:visited {
+nav li.current a:link, nav li.current link:visited {
   background-color: #c78b07;
   color: #222222;
 }
-
 /*welcome section*/
-
 .header-welcome {
-background-image: url(../Images/main-banner.jpg);
-background-size: cover;
-padding-top: 68px;
-padding-bottom: 68px;
+  background-image: url(../Images/main-banner.jpg);
+  background-size: cover;
+  padding-top: 68px;
+  padding-bottom: 68px;
 }
-
 .header-welcome .container {
-background-color: rgba(0, 0, 0, 50%);
-color: white;
-padding-top: 50px;
+  background-color: rgba(0, 0, 0, 50%);
+  color: white;
+  padding-top: 50px;
 }
-
 .header-welcome button {
-
 }
-
 /*about section*/
-
 .section-about {
   background-color: #ffe6ac;
 }
-
 /*Our services section*/
-
 /*digital transformation*/
 .digital-transformation{
   background-color: #ffe6ac;
 }
-
 h3{
   font-size: 32px;
   font-weight: bold;
   padding-top: 10px;
   padding-left: 10px;
 }
-
 .digital-jpg{
- width: 100%; 
+  width: 100%;
 }
-
 button{
   background-color: #000800;
   border: none;
@@ -165,334 +122,237 @@ button{
   cursor: pointer;
   padding-left: 10px;
 }
-
 /*end digital transformation*/
-
 /*marketing*/
-
 .marketing {
   background-color: #ffe6ac;
 }
-
 .marketing-jpg{
   width: 100%;
   margin-top: 10px;
 }
-
 /*end marketing*/
-
 /*video production*/
-
 .video-production {
   background-color: #ffe6ac;
 }
-
 .video-jpg{
   width: 100%;
 }
-
 /*end video production*/
-
 /*web development*/
-
 .web-development{
   background-color: #ffe6ac;
 }
-
 .web-jpg{
   width: 100%;
 }
-
 /*end web development*/
-
 /*print plans*/
-
 .print-plans{
   background-color: #ffe6ac;
 }
-
 .print-jpg{
   width: 100%;
 }
-
 /*end print plans*/
 /*end about section*/
-
 /*vision section*/
-
 .section-vision{
-background-image: url(../Images/vision.jpg);
-background-size: cover;
-background-position: center;
+  background-image: url(../Images/vision.jpg);
+  background-size: cover;
+  background-position: center;
 }
-
 .vision-header{
   color: white;
 }
-
 .vision-text{
   color: white;
 }
 /*end vision section*/
-
 /*our team*/
-
 .john{
   background-color: #ffe6ac;
 }
-
 .ceo-jpg{
-width: 100%;
+  width: 100%;
 }
-
 h4{
-font-weight: bold;
-font-size: 15px;
-padding-left: 10px;
+  font-weight: bold;
+  font-size: 15px;
+  padding-left: 10px;
 }
-
 .bob{
   background-color: #ffe6ac;
 }
-
 .cfo-jpg{
   width: 100%;
 }
-
 /*end our team*/
-
 /*contact us*/
-
 .firstname{
   width: 100%;
   height: 20px;
 }
-
 .email{
   width: 100%;
   height: 20px;
 }
-
 .message{
   width: 100%;
   height: 100px;
 }
-
 .send-button{
   background-color: #000800;
   color: #c78b07;
- margin: 10px;
- padding: 5px;
+  margin: 10px;
+  padding: 5px;
 }
-
 /*end contact us*/
-
-
 table, th, td{
   border: #000800;
   border: 10px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-/* END OF YOUR MOBILE-FIRST CSS. 
-NO MEDIA QUERIES ABOVE THIS LINE */
-
+/* END OF YOUR MOBILE-FIRST CSS. NO MEDIA QUERIES ABOVE THIS LINE */
 /* TABLET STYLES: 760px to 1199px */
 @media screen and (min-width: 760px) {
-
   .container {
       width: 706px;
       margin: 0 auto;
-  }
-  /* NOTHING ELSE! */ 
+ }
+ /* NOTHING ELSE! */
 }
-
 /* DESKTOP STYLES: ABOVE 1200px */
 @media screen and (min-width: 1200px) {
-
   .container {
       width: 1168px;
       padding: 0 16px;
       margin: 0 auto;
-  }
-
-  /* ALL YOUR DESKTOP STYLES HERE */
-
-
-
-h1{
-  font-size: 81px;
-  line-height: 118px;
-  font-weight: bold;
-}
-
-
+ }
+ /* ALL YOUR DESKTOP STYLES HERE */
+  h1{
+      font-size: 81px;
+      line-height: 118px;
+      font-weight: bold;
+ }
   h2{
-    font-size: 54px;
-    line-height: 1;
-    font-weight: bold;
-  }
-
+      font-size: 54px;
+      line-height: 1;
+      font-weight: bold;
+ }
   h3{
-    font-size: 36px;
-    line-height: 1;
-  font-weight:bold;
-  margin-bottom: 0.8em;
-  }
-
+      font-size: 36px;
+      line-height: 1;
+      font-weight:bold;
+      margin-bottom: 0.8em;
+ }
   p{
-    font-size: 16px;
-    line-height: 1.5;
-  }
-
+      font-size: 16px;
+      line-height: 1.5;
+ }
   header nav{
-    padding: 0;
-  }
-
+      padding: 0;
+ }
   .nav-list{
-    margin: 0;
-  padding: 2rem 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+      margin: 0;
+      padding: 2rem 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+ }
   .nav-item{
-    list-style: none;
-    margin-right:2rem;
-  }
-  
+      list-style: none;
+      margin-right:2rem;
+ }
   .nav-item a{
-    text-decoration: none;
-    
-  }
-
+      text-decoration: none;
+ }
   .connect{
-    background-color: #c78b07;
-    color: #000800;
-  }
-
-
-#flex-main{
-  display: flex;
+      background-color: #c78b07;
+      color: #000800;
+ }
+  #flex-main{
+      display: flex;
+ }
+  .flex-pic{
+      height: 300px;
+      margin-left: 50px;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-right: 20px;
+ }
+  .aboutus{
+      margin-top: 30px;
+      margin-bottom: 20px;
+ }
+  .ourserv{
+      margin-top: 50px;
+      margin-left: 100px;
+      margin-bottom: 20px;
+ }
+  .services-grid1{
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-gap: 1em;
+ }
+  .services-grid2{
+      display: grid;
+      grid-template-columns: 33% 33% 33%;
+      grid-gap: 1em;
+      margin-top: 1em;
+      margin-bottom: 1em;
+ }
+  .ourteam{
+      margin-top: 50px;
+      margin-bottom: 30px;
+ }
+  .johnp{
+      margin: 1em;
+ }
+  .bobp{
+      margin: 1em;
+ }
+  #team-grid{
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-template-rows: auto auto;
+ }
+  .ceo{
+      grid-column-start: 1;
+ }
+  .cfo{
+      grid-column: 2 / span 2;
+ }
+  .bob{
+      grid-row: 3 / span 3;
+ }
+  .last-grid{
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-gap: 1em;
+ }
+  .contacth{
+      margin-top: 50px;
+ }
+  .hours{
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      border-collapse: collapse;
+      width: 100%;
+ }
+  .hours td, .hours th {
+      border: 1px solid #ddd;
+      padding: 8px;
+ }
+  .hours th{
+      background-color: #ffe6ac;
+      text-align: center;
+ }
+  .foot{
+      background-color: #000800;
+      color: #c78b07;
+      margin: 20px;
+      padding: 20px;
+ }
 }
-
-.flex-pic{
-height: 300px;
-margin-left: 50px;
-margin-top: 20px;
-margin-bottom: 20px;
-margin-right: 20px;
-}
-
-.aboutus{
-  margin-top: 30px;
-  margin-bottom: 20px;
-}
-
-.ourserv{
-  margin-top: 50px;
-  margin-left: 100px;
-  margin-bottom: 20px;
-}
-
-.services-grid1{
-  display: grid;
- grid-template-columns: 50% 50%;
-  grid-gap: 1em;
-}
-
-.services-grid2{
-  display: grid;
-  grid-template-columns: 33% 33% 33%;
-  grid-gap: 1em;
-  margin-top: 1em;
-  margin-bottom: 1em;
-}
-
-.ourteam{
-  margin-top: 50px;
-  margin-bottom: 30px;
-}
-
-.johnp{
-  margin: 1em;
-}
-
-.bobp{
-  margin: 1em;
-}
-
-#team-grid{
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto;
-}
-
- .ceo{
-grid-column-start: 1;
-}
-
-.cfo{
-grid-column: 2 / span 2;
-}
-
-.bob{
-  grid-row: 3 / span 3;
-}
-
-
-.last-grid{
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-gap: 1em;
-}
-
-.contacth{
-  margin-top: 50px;
-}
-
-
-.hours{
-
-   
-  
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-   
-   
-    border-collapse: collapse;
-    width: 100%;
-  
-}
-
-.hours td, .hours th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-.hours th{
-  background-color: #ffe6ac;
-  text-align: center;
-}
-
-.foot{
-  background-color: #000800;
-  color: #c78b07;
-  margin: 20px;
-  padding: 20px;
-}
-}
-
-
